# stratum

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/bench-history/: .keep
.github/workflows/: bench-floor.yml  ci.yml  eval-baseline.yml  eval-llm.yml  provider-llama-cpp.yml  release.yml
assets/brand/: README.md
assets/bundles/: mobile-high-v1.toml  mobile-low-v1.toml  mobile-medium-v1.toml  mobile-ultra-low-v1.toml
assets/grammars/: tool_call.gbnf
crates/stratum-backend-local/: Cargo.toml
crates/stratum-backend-local/src/: lib.rs
crates/stratum-cli/: Cargo.toml  build.rs
crates/stratum-cli/src/: app.rs  brand.rs  chat.rs  main.rs  palette.rs  permission_prompter.rs  theme.rs
crates/stratum-cli/tests/: agents_cli.rs  chat_agents_per_role_model.rs  chat_gguf.rs  chat_handoff.rs  chat_parallel.rs  chat_resume.rs  cli_smoke.rs  client_cmd.rs  completions.rs  config_cli.rs  doctor_schema.rs  doctor_telemetry.rs  eval_run.rs  events_jsonl_flag.rs  events_tail.rs  headless_print.rs  mcp_list.rs  mem_check_suggest.rs  models_catalog.rs  models_sync.rs  self_update_apply.rs  self_update_check.rs  serve_daemon.rs  serve_model.rs  serve_openai_multimodal.rs  sessions_cli.rs  version_info.rs  voice_dialogue_e2e.rs
crates/stratum-eval/: Cargo.toml
crates/stratum-eval/src/: app.rs  bench_floor.rs  bench_history.rs  lib.rs  main.rs  phase7_compare.rs
crates/stratum-mobile-core/: Cargo.toml  build.rs  cbindgen.toml
crates/stratum-mobile-core/src/: lib.rs  stratum.udl
crates/stratum-runtime/: .txt  Cargo.toml
crates/stratum-runtime/fixtures/intent_router/: labeled_50.jsonl
crates/stratum-runtime/fixtures/text_to_blocks/: compression_fidelity.jsonl  debug.jsonl  edge_cases.jsonl  explain.jsonl  greetings.jsonl  multi_step.jsonl  plan.jsonl  qwen3_think_leak.jsonl  refactor.jsonl  tool_use.jsonl
crates/stratum-runtime/i18n/: en.ftl
crates/stratum-runtime/prompts/: caveman_rewriter.md  polisher.md  reviewer.md
crates/stratum-runtime/src/: agent_factory.rs  agent_handoff.rs  agent_loop.rs  agent_registry_loader.rs  agent_session.rs  agents.rs  anthropic_api_judge.rs  auto_memory.rs  budget.rs  budget_meter.rs  cancel.rs  cancel_cascade.rs  candle_provider.rs  catalog_sync.rs  caveman.rs  claude_cli_judge.rs  compressor.rs  conversation.rs  crash_report.rs  download.rs  embedder.rs  eval_runner.rs  event_log.rs  gate.rs  hooks.rs  hot_reload.rs  i18n.rs  injection.rs  install.rs  intent_router.rs  lib.rs  llama_provider.rs  logging.rs  mcp.rs  mcp_jsonrpc.rs  memory_loader.rs  mic.rs  model_catalog.rs  model_resolver.rs  observability.rs  (+45 more)
crates/stratum-testkit/: Cargo.toml
crates/stratum-testkit/src/: lib.rs
crates/stratum-tui/: Cargo.toml
crates/stratum-tui-api/: Cargo.toml
crates/stratum-tui-api/src/: lib.rs
crates/stratum-tui/src/: brand.rs  chat.rs  lib.rs  palette.rs  permission_prompter.rs  theme.rs
crates/stratum-types/: Cargo.toml
crates/stratum-types/src/: block.rs  capability.rs  error.rs  ids.rs  lib.rs  mem.rs
crates/stratum-types/tests/: catalog_codes.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check_error_codes.rs  check_sentinel_codes.rs  main.rs
docs/: architecture.md  coverage-exclusions.md  llama-cpp-build.md  phase-7-eval-protocol.md  phase-8-android-build.md  phase-8-ios-build.md  phase-8-readiness.md  phase-8-tier-ladder.md  release-notes-v1.0.0.md  release-notes-v1.0.1.md  release-process.md  service-install.md  verification-gates.md
docs/integrations/: README.md  aider.md  cline.md  continue.md  openhands.md
docs/schemas/: README.md  doctor.v1.json
evals/: README.md  baseline.json  coder.json  llm-baseline.json  llm-coder.json  polisher.json
release-files/: catalog-stable.json  stable.json  stratum-v0.2.9-aarch64-apple-darwin.tar.gz.sha256  stratum-v0.2.9-aarch64-unknown-linux-gnu.tar.gz.sha256  stratum-v0.2.9-x86_64-apple-darwin.tar.gz.sha256  stratum-v0.2.9-x86_64-unknown-linux-gnu.tar.gz.sha256
