[workspace]
resolver = "2"
members = [
    "crates/stratum-types",
    "crates/stratum-testkit",
    "crates/stratum-runtime",
    "crates/stratum-cli",
    "crates/stratum-eval",
    "crates/xtask",
]

[workspace.package]
version       = "0.0.0"
edition       = "2021"
rust-version  = "1.90"
authors       = ["Krishnendu <krishnenduchatterjee25@gmail.com>"]
license       = "Apache-2.0 OR MIT"
repository    = "https://github.com/krishnendu/stratum"
homepage      = "https://stratum.dev"
readme        = "README.md"
keywords      = ["llm", "agent", "tui", "local", "ai"]
categories    = ["command-line-utilities"]

[workspace.lints.rust]
unsafe_code                  = "deny"
missing_debug_implementations = "warn"
missing_docs                 = "warn"
rust_2018_idioms             = { level = "warn", priority = -1 }
unreachable_pub              = "warn"
unused_must_use              = "deny"

[workspace.lints.clippy]
# Bars are intentionally high; relax per-call with `#[allow(...)]` only with a comment justifying it.
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }
# G4 — no panics, unwraps, or expects outside tests.
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
todo        = "warn"
dbg_macro   = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Style nits we don't care about as errors.
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions  = { level = "allow", priority = 1 }

[workspace.dependencies]
# Pinned across the workspace; bumped in lockstep.
thiserror       = "2"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml_edit       = "0.25"
clap            = { version = "4", features = ["derive", "env"] }
clap_complete   = "4"
anyhow          = "1"            # only allowed in stratum-cli (boundary)
tokio           = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util      = "0.7"
insta           = "1"
proptest        = "1"
sysinfo         = "0.32"
dirs            = "6"
time            = { version = "0.3", features = ["formatting", "serde"] }
tempfile        = "3"
ratatui         = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm       = "0.28"
sha2            = "0.11"
ureq            = { version = "2", default-features = false, features = ["tls"] }
rand            = { version = "0.9", default-features = false, features = ["small_rng", "std", "std_rng"] }
zeroize         = { version = "1", features = ["derive"] }
regex           = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
# Optional, only pulled in when the `provider-llama-cpp` feature is enabled
# on `stratum-runtime` (and transitively on `stratum-cli`). Off by default
# so per-PR CI does not pay the multi-minute llama.cpp build cost.
llama-cpp-2     = { version = "0.1", default-features = false }
# Used to UTF-8-decode per-token byte pieces returned from llama.cpp.
# Only pulled in alongside `llama-cpp-2` via the `provider-llama-cpp` feature.
encoding_rs     = { version = "0.8" }

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = "symbols"
panic           = "abort"
opt-level       = 3

[profile.dev]
opt-level       = 0
debug           = "limited"

[profile.test]
opt-level       = 1
