[package]
name         = "stratum-cli"
description  = "Stratum CLI entry point."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[[bin]]
name = "stratum"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Forwards to `stratum-runtime`'s `provider-llama-cpp` feature so the CLI
# can opt into the llama.cpp-backed provider. Off by default.
provider-llama-cpp = ["stratum-runtime/provider-llama-cpp"]

[dependencies]
stratum-types       = { path = "../stratum-types" }
stratum-runtime     = { path = "../stratum-runtime" }
clap                = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
time                = { workspace = true }
ratatui             = { workspace = true }
crossterm           = { workspace = true }
ureq                = { workspace = true }
toml_edit           = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json          = { workspace = true }
tempfile            = { workspace = true }
toml_edit           = { workspace = true, features = ["serde"] }
