[package]
name         = "stratum-cli"
description  = "Stratum — your local model crew. Local-first chat with an LLM agent."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[[bin]]
name = "stratum"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Forwards to `stratum-runtime`'s `provider-llama-cpp` feature so the CLI
# can opt into the llama.cpp-backed provider. Off by default.
provider-llama-cpp = ["stratum-runtime/provider-llama-cpp"]
# Forwards to `stratum-tui` and `stratum-runtime`'s `voice` feature, which
# enables cpal-backed microphone capture (push-to-talk). Off by default
# so cross-compile to Linux from macOS works without ALSA headers. macOS
# release tarballs enable this; the Linux prebuilt does not. Users who
# want voice-in on Linux compile from source with
# `cargo install --features voice` after `apt install libasound2-dev`.
voice = ["stratum-tui/voice", "stratum-runtime/voice"]

[dependencies]
stratum-types       = { path = "../stratum-types" }
stratum-runtime     = { path = "../stratum-runtime" }
# stratum-tui — palette/theme/brand split. The full chat renderer
# still lives in this crate (~7K lines); Phase B's final move is a
# focused-session follow-up.
stratum-tui         = { path = "../stratum-tui" }
clap                = { workspace = true }
clap_complete       = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
time                = { workspace = true }
ratatui             = { workspace = true }
crossterm           = { workspace = true }
ureq                = { workspace = true }
toml_edit           = { workspace = true, features = ["serde"] }
tar                 = { workspace = true }
flate2              = { workspace = true }
ctrlc               = { workspace = true }

[dev-dependencies]
serde_json          = { workspace = true }
tempfile            = { workspace = true }
toml_edit           = { workspace = true, features = ["serde"] }
# Used only by the `serve_exits_cleanly_on_sigterm` integration test to
# send SIGTERM to the spawned child without shelling out to `kill`
# (which may not be on PATH in minimal CI images).
[target.'cfg(unix)'.dev-dependencies]
libc                = "0.2"
