[package]
name         = "stratum-runtime"
description  = "Runtime foundations: paths, hardware probe, tier classifier, installed.toml."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[lints]
workspace = true

[dependencies]
stratum-types      = { path = "../stratum-types" }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml_edit          = { workspace = true, features = ["serde"] }
sysinfo            = { workspace = true }
dirs               = { workspace = true }
time               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sha2               = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
