[package]
name         = "stratum-runtime"
description  = "Runtime foundations: paths, hardware probe, tier classifier, installed.toml."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[lints]
workspace = true

[features]
default = []
# Pulls in the optional `llama-cpp-2` crate and compiles the
# `LlamaCppProvider` scaffold. Off by default; the heavy llama.cpp build
# is exercised by the `provider-llama-cpp` workflow (nightly cron, release
# tag, manual dispatch) — not per-PR CI.
provider-llama-cpp = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dependencies]
stratum-types      = { path = "../stratum-types" }
llama-cpp-2        = { workspace = true, optional = true }
encoding_rs        = { workspace = true, optional = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml_edit          = { workspace = true, features = ["serde"] }
sysinfo            = { workspace = true }
dirs               = { workspace = true }
time               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sha2               = { workspace = true }
ureq               = { workspace = true }
rand               = { workspace = true }
zeroize            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
