[package]
name         = "stratum-runtime"
description  = "Runtime foundations: paths, hardware probe, tier classifier, installed.toml."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[lints]
workspace = true

[features]
default = []
# Pulls in the optional `llama-cpp-2` crate and compiles the
# `LlamaCppProvider` scaffold. Off by default; the heavy llama.cpp build
# is exercised by the `provider-llama-cpp` workflow (nightly cron, release
# tag, manual dispatch) — not per-PR CI.
provider-llama-cpp = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Multimodal vision routing via llama.cpp's `mtmd` (mmproj) interface.
# Implies `provider-llama-cpp`. The `mtmd` module in llama-cpp-2 0.1.146
# is upstream-tagged experimental — keeping it behind its own feature
# means the default and `provider-llama-cpp` builds don't depend on the
# experimental ABI. Per `plan/05-multimodal.md`: Gemma 4 E4B + companion
# `mmproj-*.gguf` is the v1 vision pair.
vision = ["provider-llama-cpp", "llama-cpp-2/mtmd"]
# OS keyring backend for SecretStore. Off by default so per-PR CI doesn't
# build dbus/SecretService on Linux runners that lack the system libs.
# Production CLI builds opt in; tests rely on the in-memory backend.
os-keyring = ["dep:keyring"]
# Filesystem watcher for settings / agents / hooks hot-reload. Off by
# default; per-PR CI uses the no-op stub so it doesn't link inotify /
# FSEvents / ReadDirectoryChanges.
fs-watch = ["dep:notify"]

[dependencies]
stratum-types      = { path = "../stratum-types" }
llama-cpp-2        = { workspace = true, optional = true }
encoding_rs        = { workspace = true, optional = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml_edit          = { workspace = true, features = ["serde"] }
sysinfo            = { workspace = true }
dirs               = { workspace = true }
time               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sha2               = { workspace = true }
ureq               = { workspace = true }
rand               = { workspace = true }
zeroize            = { workspace = true }
regex              = { workspace = true }
keyring            = { workspace = true, optional = true }
notify             = { workspace = true, optional = true }
thiserror          = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
