[package]
name         = "stratum-tui"
description  = "Stratum TUI — palette, themes, brand assets. Backend-agnostic."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[lints]
workspace = true

[dependencies]
ratatui          = { workspace = true }
crossterm        = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
stratum-runtime  = { path = "../stratum-runtime" }
stratum-types    = { path = "../stratum-types" }

[dev-dependencies]
tempfile = { workspace = true }
