[package]
name         = "xtask"
description  = "Workspace automation tasks (lints, validators) — not published."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }
publish      = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
